k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: todo-app
